--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <div class="right-links" id="rightLinks">
             <a href="#">Iniciar sesión</a>
-            <a href="#">Cesta</a>
+            <a href="cesta.html">Cesta</a>
         </div>
     </header>
 
@@ -69,9 +69,9 @@
             </ul>
 
             <ul class="submenu" id="submenu-accesorios">
-                <li><a href="categoria.html?tipo=pulseras">Pulseras</a></li>
-                <li><a href="categoria.html?tipo=pegatinas">Pegatinas</a></li>
-                <li><a href="categoria.html?tipo=bolsas">Bolsas</a></li>
+                <li><a href="categoria.html?tipo=pulseras">PULSERAS</a></li>
+                <li><a href="categoria.html?tipo=pegatinas">PEGATINAS</a></li>
+                <li><a href="categoria.html?tipo=bolsas">BOLSAS</a></li>
             </ul>
         </div>
 
