--- a/producto.html
+++ b/producto.html
@@ -64,9 +64,9 @@
             </ul>
 
             <ul class="submenu" id="submenu-accesorios">
-                <li><a href="categoria.html?tipo=pulseras">Pulseras</a></li>
-                <li><a href="categoria.html?tipo=pegatinas">Pegatinas</a></li>
-                <li><a href="categoria.html?tipo=bolsas">Bolsas</a></li>
+                <li><a href="categoria.html?tipo=pulseras">PULSERAS</a></li>
+                <li><a href="categoria.html?tipo=pegatinas">PEGATINAS</a></li>
+                <li><a href="categoria.html?tipo=bolsas">BOLSAS</a></li>
             </ul>
         </div>
 
