--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <li><a href="categoria.html?tipo=sudaderas">SUDADERAS</a></li>
                 <li><a href="categoria.html?tipo=pantalones">PANTALONES</a></li>
                 <li><a href="categoria.html?tipo=shorts">SHORTS | BERMUDAS</a></li>
-                <li><a href="categoria.html?tipo=jerseis">JERSÉIS</a></li>
+                <li><a href="categoria.html?tipo=jerseis">CHAQUETAS</a></li>
             </ul>
 
             <ul class="submenu" id="submenu-hombre">
@@ -64,8 +64,7 @@
                 <li><a href="categoria.html?tipo=sudaderas">SUDADERAS</a></li>
                 <li><a href="categoria.html?tipo=pantalones">PANTALONES</a></li>
                 <li><a href="categoria.html?tipo=shorts">SHORTS | BERMUDAS</a></li>
-                <li><a href="categoria.html?tipo=camisas">CAMISAS</a></li>
-                <li><a href="categoria.html?tipo=jerseis">JERSÉIS</a></li>
+                <li><a href="categoria.html?tipo=jerseis">CHAQUETAS</a></li>
             </ul>
 
             <ul class="submenu" id="submenu-accesorios">
