--- a/producto.html
+++ b/producto.html
@@ -51,7 +51,7 @@
                 <li><a href="categoria.html?tipo=sudaderas">SUDADERAS</a></li>
                 <li><a href="categoria.html?tipo=pantalones">PANTALONES</a></li>
                 <li><a href="categoria.html?tipo=shorts">SHORTS | BERMUDAS</a></li>
-                <li><a href="categoria.html?tipo=jerseis">CHAQUETAS</a></li>
+                <li><a href="categoria.html?tipo=chaquetas">CHAQUETAS</a></li>
             </ul>
 
             <ul class="submenu" id="submenu-hombre">
@@ -59,7 +59,7 @@
                 <li><a href="categoria.html?tipo=sudaderas">SUDADERAS</a></li>
                 <li><a href="categoria.html?tipo=pantalones">PANTALONES</a></li>
                 <li><a href="categoria.html?tipo=shorts">SHORTS | BERMUDAS</a></li>
-                <li><a href="categoria.html?tipo=jerseis">CHAQUETAS</a></li>
+                <li><a href="categoria.html?tipo=chaquetas">CHAQUETAS</a></li>
             </ul>
 
             <ul class="submenu" id="submenu-accesorios">
