--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <video autoplay muted loop class="video-background">
-        <source src="imagenes/Fondo Pagina Web_.mov" type="video/mp4" />
+        <source src="imagenes/Fondo Pagina Web.mp4" type="video/mp4" />
     </video>
 
     <div class="video-overlay"></div>
