--- a/categoria.html
+++ b/categoria.html
@@ -2,9 +2,11 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Categoría</title>
-  <link rel="stylesheet" href="categoria.css">
   <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="categoria.css">
+  
 </head>
 <body>
   <header>
@@ -58,6 +60,7 @@
                 <li><a href="categoria.html?tipo=sudaderas">SUDADERAS</a></li>
                 <li><a href="categoria.html?tipo=pantalones">PANTALONES</a></li>
                 <li><a href="categoria.html?tipo=shorts">SHORTS | BERMUDAS</a></li>
+                <li><a href="categoria.html?tipo=camisas">CAMISAS</a></li>
                 <li><a href="categoria.html?tipo=chaquetas">CHAQUETAS</a></li>
             </ul>
 
