--- a/producto.html
+++ b/producto.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Producto</title>
-  <link rel="stylesheet" href="producto.css" />
   <link rel="stylesheet" href="index.css" />
+  <link rel="stylesheet" href="producto.css" />
+  
 </head>
 <body>
     <header>
@@ -59,6 +60,7 @@
                 <li><a href="categoria.html?tipo=sudaderas">SUDADERAS</a></li>
                 <li><a href="categoria.html?tipo=pantalones">PANTALONES</a></li>
                 <li><a href="categoria.html?tipo=shorts">SHORTS | BERMUDAS</a></li>
+                <li><a href="categoria.html?tipo=camisas">CAMISAS</a></li>
                 <li><a href="categoria.html?tipo=chaquetas">CHAQUETAS</a></li>
             </ul>
 
