--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <video autoplay muted loop class="video-background">
+    <video autoplay muted playsinline loop class="video-background">
         <source src="imagenes/Fondo Pagina Web.mp4" type="video/mp4" />
     </video>
 
