--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <video autoplay muted playsinline loop class="video-background">
-        <source src="imagenes/Fondo Pagina Web.mp4" type="video/mp4" />
+    <video autoplay muted loop class="video-background">
+        <source src="imagenes/Fondo Pagina Web_.mov" type="video/mp4" />
     </video>
 
     <div class="video-overlay"></div>
@@ -64,6 +64,7 @@
                 <li><a href="categoria.html?tipo=sudaderas">SUDADERAS</a></li>
                 <li><a href="categoria.html?tipo=pantalones">PANTALONES</a></li>
                 <li><a href="categoria.html?tipo=shorts">SHORTS | BERMUDAS</a></li>
+                <li><a href="categoria.html?tipo=camisas">CAMISAS</a></li>
                 <li><a href="categoria.html?tipo=chaquetas">CHAQUETAS</a></li>
             </ul>
 
@@ -85,7 +86,7 @@
     <main class="main-content">
         <h1>Descubre la Elegancia Luma</h1> 
         <p>Sumérgete en nuestras últimas colecciones y encuentra tu estilo.</p> 
-        <a href="#" class="cta-button">Explora nuestros Artículos</a>
+        <a href="categoria.html" class="cta-button">Explora nuestros Artículos</a>
     </main>
 
     <footer class="site-footer">
